--- a/assets/css/unminified/style-modern-rtl.css
+++ b/assets/css/unminified/style-modern-rtl.css
@@ -5997,6 +5997,10 @@ body {
   }
 }
 
+.entry-meta, .entry-meta * {
+  line-height: 1.4;
+}
+
 @media (max-width: 544px) {
   .entry-meta, .entry-meta * {
     line-height: 1.6;
