--- a/assets/css/unminified/style-modern.css
+++ b/assets/css/unminified/style-modern.css
@@ -6222,7 +6222,6 @@ body {
 .widget_calendar th,
 .widget_calendar td {
   padding: 0;
-  text-align: center;
 }
 
 .widget_calendar table,
@@ -6262,7 +6261,6 @@ body {
 
 .widget_calendar tbody {
   line-height: 2.10em;
-  text-align: center;
 }
 
 .widget_calendar tbody > tr > td {
