--- a/sass/site/secondary/_widgets-skin-1.scss
+++ b/sass/site/secondary/_widgets-skin-1.scss
@@ -147,7 +147,6 @@
 	th,
 	td {
 		padding: 0;
-		text-align: center;
 	}
 
 	table,
@@ -183,7 +182,6 @@
 	}
 	tbody {
 	    line-height: 2.10em;
-	    text-align: center;
 		> tr {
 			> td {
 			    width: 14.2857%;
